# Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
resources/nginx/: nginx.conf
scripts/: create_super_user.sh  entrypoint.sh  test.sh  test_in_docker.sh  test_in_docker_auth.sh  test_in_docker_jung.sh  test_in_docker_pages.sh  test_in_docker_rooms.sh
src/apps/accommodations/: apps.py  models.py  urls.py
src/apps/accommodations/migrations/: 0001_initial.py  0002_initial.py  0003_remove_gps_info_latitude_remove_gps_info_longitude_and_more.py  0004_refundpolicy_accommodation_image_is_representative_and_more.py
src/apps/accommodations/serializers/: accommodation_serializer.py
src/apps/accommodations/tests/: test_accommodations_integrations.py  test_accommodations_models.py  test_accommodations_serializers.py  test_accommodations_views.py
src/apps/accommodations/views/: __init__.py  accommodation_views.py
src/apps/amenities/: apps.py  models.py  urls.py
src/apps/amenities/migrations/: 0001_initial.py  0002_alter_accommodationamenity_custom_value_and_more.py
src/apps/amenities/serializers/: amenities_serializers.py
src/apps/amenities/views/: ameniites_views.py  amenities_views.py
src/apps/auth/: admin.py  urls.py
src/apps/auth/serializers/: auth_serializer.py  session_validator.py
src/apps/auth/services/: auth_service.py  token_service.py
src/apps/auth/tests/: test_auth_models.py  test_auth_serializers.py  test_auth_services.py
src/apps/auth/views/: auth_view.py
src/apps/bookings/: models.py  urls.py
src/apps/bookings/migrations/: 0001_initial.py  0002_initial.py  0003_booking_guests_count_alter_booking_total_price.py  0004_booking_booker_name_booking_booker_phone_number_and_more.py  0005_remove_booking_check_in_date_and_more.py
src/apps/bookings/querysets/: booking_queryset.py
src/apps/bookings/serializers/: booking_guest_serializer.py
src/apps/bookings/services/: booking_guest_service.py
src/apps/bookings/views/: booking_guest_view.py
src/apps/bookmarks/: models.py  urls.py
src/apps/bookmarks/migrations/: 0001_initial.py  0002_initial.py
src/apps/common/: choices.py
src/apps/common/constants/: email_constants.py
src/apps/common/permissions/: host_permission.py
src/apps/common/util/: redis_client.py
src/apps/host_management/: apps.py  serializers.py  urls.py
src/apps/host_management/serializers/: __init__.py  host_booking.py  host_management_serializers.py
src/apps/host_management/tests/: test_booking_check.py  test_host_management_view.py
src/apps/host_management/views/: accommodation_view.py  host_booking_view.py
src/apps/pages/: urls.py
src/apps/pages/tests/: test_services.py
src/apps/reviews/: models.py  urls.py
src/apps/rooms/: models.py  urls.py
src/apps/users/: models.py  urls.py
src/config/: asgi.py  settings.py  urls.py
(+36 files in other folders)
